# DivaModLoader

./: .gitignore  CMakeLists.txt  DivaModLoader.sln  LICENSE.md  README.md
.github/workflows/: build.yml  cmake-on-windows.yml  msbuild.yml
Dependencies/: Helpers.h
Dependencies/Detours/lib/: syelog.lib
DivaModLoader/: Allocator.h  CodeLoader.cpp  Context.cpp  Context.h  DivaModLoader.vcxproj  DivaModLoader.vcxproj.filters  DllMain.cpp  ModLoader.cpp  ModLoader.h  Patches.cpp  Pch.cpp  Pch.h  SigScan.cpp  Steam.cpp  Types.h  Utilities.h
DivaModLoader/Dependencies/: Helpers.h
DivaModLoader/Dependencies/Detours/lib/x64/: detours.lib
Resources/: config.toml
Resources/mods/Template Mod/: config.toml
Source/DivaModLoader/: Allocator.cpp  Allocator.h  CodeLoader.cpp  CodeLoader.h  Config.cpp  Config.h  Context.cpp  Context.h  Cover.cpp  Cover.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseLoaderImp.asm  DivaModLoader.vcxproj  DivaModLoader.vcxproj.filters  FileLoader.cpp  FileLoader.h  ModLoader.cpp  Patches.cpp  Patches.h  Pch.h  PvLoader.cpp  PvLoader.h  PvLoaderImp.asm  SaveData.cpp  SaveData.h  SaveDataImp.asm  ScoreData.cpp  SigScan.cpp  SigScan.h  SpriteLoader.cpp  SpriteLoader.h  SpriteLoaderImp.asm  StrArray.cpp  StrArray.h  StrArrayImp.asm  ThumbnailLoader.cpp  ThumbnailLoader.h  Types.h  Utilities.h
